// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627885860000,
    "y": null,
  },
  Object {
    "x": 1627885920000,
    "y": 0,
  },
  Object {
    "x": 1627885980000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627886040000,
    "y": 0,
  },
  Object {
    "x": 1627886100000,
    "y": 0.5,
  },
  Object {
    "x": 1627886160000,
    "y": 0.117647058823529,
  },
  Object {
    "x": 1627886220000,
    "y": 0,
  },
  Object {
    "x": 1627886280000,
    "y": 0,
  },
  Object {
    "x": 1627886340000,
    "y": 0.125,
  },
  Object {
    "x": 1627886400000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1627886460000,
    "y": 0,
  },
  Object {
    "x": 1627886520000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627886580000,
    "y": 0,
  },
  Object {
    "x": 1627886640000,
    "y": 0,
  },
  Object {
    "x": 1627886700000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627886760000,
    "y": 0.285714285714286,
  },
  Object {
    "x": 1627886820000,
    "y": 0,
  },
  Object {
    "x": 1627886880000,
    "y": 0.125,
  },
  Object {
    "x": 1627886940000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627887000000,
    "y": 0,
  },
  Object {
    "x": 1627887060000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627887120000,
    "y": 0,
  },
  Object {
    "x": 1627887180000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627887240000,
    "y": 0.25,
  },
  Object {
    "x": 1627887300000,
    "y": 0.25,
  },
  Object {
    "x": 1627887360000,
    "y": 0,
  },
  Object {
    "x": 1627887420000,
    "y": 0,
  },
  Object {
    "x": 1627887480000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627887540000,
    "y": 0.2,
  },
  Object {
    "x": 1627887600000,
    "y": 0,
  },
  Object {
    "x": 1627887660000,
    "y": 0.181818181818182,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 0,
  },
  Object {
    "x": 1627886880000,
    "y": 0.125,
  },
  Object {
    "x": 1627886940000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627887000000,
    "y": 0,
  },
  Object {
    "x": 1627887060000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627887120000,
    "y": 0,
  },
  Object {
    "x": 1627887180000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627887240000,
    "y": 0.25,
  },
  Object {
    "x": 1627887300000,
    "y": 0.25,
  },
  Object {
    "x": 1627887360000,
    "y": 0,
  },
  Object {
    "x": 1627887420000,
    "y": 0,
  },
  Object {
    "x": 1627887480000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627887540000,
    "y": 0.2,
  },
  Object {
    "x": 1627887600000,
    "y": 0,
  },
  Object {
    "x": 1627887660000,
    "y": 0.181818181818182,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 2`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 0,
  },
  Object {
    "x": 1627886880000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627886940000,
    "y": 0,
  },
  Object {
    "x": 1627887000000,
    "y": 0.5,
  },
  Object {
    "x": 1627887060000,
    "y": 0.117647058823529,
  },
  Object {
    "x": 1627887120000,
    "y": 0,
  },
  Object {
    "x": 1627887180000,
    "y": 0,
  },
  Object {
    "x": 1627887240000,
    "y": 0.125,
  },
  Object {
    "x": 1627887300000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1627887360000,
    "y": 0,
  },
  Object {
    "x": 1627887420000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627887480000,
    "y": 0,
  },
  Object {
    "x": 1627887540000,
    "y": 0,
  },
  Object {
    "x": 1627887600000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627887660000,
    "y": 0.285714285714286,
  },
]
`;
